--- a/lib/dedalo/component_date/html/component_date_search.phtml
+++ b/lib/dedalo/component_date/html/component_date_search.phtml
@@ -71,6 +71,16 @@
 						$html_content .= '</li>';
 					}//end foreach ($ar_dato as $key => $current_dato)
 					$html_content .= '</ul>';
+
+				#
+				# JS Init component
+					$html_content .= '<script>';
+					# Init component
+					$init_options = new stdClass();
+						$init_options->component_name 	= $component_name;
+						$init_options->wrapper_id 		= $id_wrapper;
+					$html_content .= 'component_common.init('.json_encode($init_options).');';
+					$html_content .= '</script>';
 				break;				
 	}
 	
