--- a/lib/dedalo/component_number/css/component_number.less
+++ b/lib/dedalo/component_number/css/component_number.less
@@ -19,7 +19,8 @@ input.css_number {
 }
 /*
 * Remove the arrows (spinners) in the component_number, the arrows are showed by default by the browser
-/*
+/**/
+
 input[type=number]::-webkit-inner-spin-button, 
 input[type=number]::-webkit-outer-spin-button { 
 	-webkit-appearance: none;
@@ -27,7 +28,7 @@ input[type=number]::-webkit-outer-spin-button {
 	appearance: none;
 	margin: 0; 
 }
-*/
+
 
 /*LANG*/
 .css_lang_image_delete {
