Add support to view images with external source

--- a/lib/dedalo/component_image/html/component_image_portal_list.phtml
+++ b/lib/dedalo/component_image/html/component_image_portal_list.phtml
@@ -34,8 +34,7 @@ $js_url = DEDALO_LIB_BASE_URL.'/component_image/js/component_image_read.js';
 							
 			case ($permissions>=1) :
 					
-
-				if (file_exists($thumb_path)) {
+				if (file_exists($thumb_path) || !empty($external_source)) {
 					
 					# CLICK_ACTION
 					$click_action="onclick=\"tool_common.open_player(this,{'type':'component_image','image_full_url':'$image_full_url'});\" ";
