--- a/lib/dedalo/login/css/login.less
+++ b/lib/dedalo/login/css/login.less
@@ -115,6 +115,10 @@
 			margin-top: 18px;
 			margin-bottom: 10px;
 			background-color: rgba(0, 204, 0, 0.69);
+
+			line-height: 1.5em;
+		    padding: 1.5em;
+		    font-weight: bold;
 		}
 	.building_backup {
 		background-color: #f7f7f7;
@@ -136,15 +140,19 @@
 		padding-bottom: 10px;
 		width: 100%;
 		text-align: left;			
-		}
-	.set_button {
+	}
+	
+	div.set_button {
 		//padding-right: 20%;
-		padding-top: 10px;		
-		} 
-		.set_button > input {
+		padding-top: 30px;
+
+		> input {
 			cursor: pointer;
 			width: 100%;
+			//height: 3.2em;
 		}
+	} 
+		
 
 	.css_wrap_login input[type="text"], 
 	.css_wrap_login input[type="password"] {
