Fixed problem with large horizontal images overflow in component image

--- a/lib/dedalo/component_image/css/component_image.less
+++ b/lib/dedalo/component_image/css/component_image.less
@@ -71,8 +71,18 @@
 	//position: absolute;
 	//top: 0;
 	//left: 0;
+	display: table;
+	//position: relative;
 	//overflow: hidden;
+
+	>canvas {
+		//display: none;
+		//position: absolute;
+		//left: 0;
+		//top: 0;
+		height: 100%;
 	}
+}
 .canvas_edit {
 	
 	/*
