Change the name of the clases and functions

--- a/lib/dedalo/tools/tool_cataloging/html/tool_cataloging_button.phtml
+++ b/lib/dedalo/tools/tool_cataloging/html/tool_cataloging_button.phtml
@@ -10,7 +10,7 @@
 	# ICON
 	$title	  = label::get_label('abrir').' '.label::get_label('herramienta');
 	
-	$html_tool .= '<a href="javascript:void(0);" class="id_column_buttons button_catalogue link" title="'.$title.'" onclick="tool_common.open_tool_calatogue(this)" ';
+	$html_tool .= '<a href="javascript:void(0);" class="id_column_buttons button_catalogue link" title="'.$title.'" onclick="tool_common.open_tool_cataloging(this)" ';
 	$html_tool .= 'data-tool_tipo="'.$tool_tipo.'" ';
 	$html_tool .= 'data-section_tipo="'.$section_tipo.'" ';
 	$html_tool .= 'data-section_id="'.$section_id.'" ';
