--- a/lib/dedalo/tools/tool_cataloging/css/tool_cataloging.less
+++ b/lib/dedalo/tools/tool_cataloging/css/tool_cataloging.less
@@ -13,11 +13,11 @@ body {
     flex-direction: column;
 }
 
-.html_page_wrap_tool_description, .html_page_wrap_tool_description .content_html {
+.html_page_wrap_tool_cataloging, .html_page_wrap_tool_cataloging .content_html {
 	height: 100%;
 }
 
-.tool_description_icon {
+.tool_cataloging_icon {
 	background-color: @color_trascription;
 	background-image: url(../../../themes/default/icon_transcription_hover.svg);
 	// Adjust icon size
@@ -26,9 +26,9 @@ body {
     background-position-x: 6px !important;
 } 
 
-/* TOOL_DESCRIPTION CASE
+/* tool_cataloging CASE
 	--------------------------------------------- */
-	.html_page_wrap_tool_description .content_data {
+	.html_page_wrap_tool_cataloging .content_data {
 		width: 100%;		
 	}
 
@@ -72,7 +72,7 @@ body {
 
 /* PAGE
 ------------------------------------------------------ */
-	.wrap_tool_description_page {
+	.wrap_tool_cataloging_page {
 		//background-color: #F590F0;
 		margin: 0;
 		padding: 0;
@@ -90,7 +90,7 @@ body {
 
 
 // inspector
-	#inspector_log.tool_description_inspector_log {
+	#inspector_log.tool_cataloging_inspector_log {
 		//background-color: aliceblue;
 		display: block;
 		padding-left: 4px;
@@ -116,13 +116,13 @@ body {
 	}
 
 
-	.view_tool_description_item {
+	.view_tool_cataloging_item {
 		text-align: left;
 	}
 
 
 
-	.html_page_wrap_tool_description .toponymy_list li {
+	.html_page_wrap_tool_cataloging .toponymy_list li {
 		width: 100%;
 	}
 	
