Create the basic function to the tool_cataloging

--- a/lib/dedalo/tools/tool_cataloging/html/tool_cataloging_header.phtml
+++ b/lib/dedalo/tools/tool_cataloging/html/tool_cataloging_header.phtml
@@ -13,11 +13,7 @@
 		#
 		# INFO
 		$html .= "<div class=\"header_info\">";
-		$html .= $section_label;
-		$html .= ' | ' . $section_id . ' | ';
-		if (is_object($inverse_code)) {
-			$html .= $inverse_code->value;
-		}
+		$html .= $tool_label;
 		$html .= "</div>";//end header_info
 
 
