--- a/lib/dedalo/html_page/css/html_page.less
+++ b/lib/dedalo/html_page/css/html_page.less
@@ -38,7 +38,7 @@ input, select {
 	color: initial;
 	border-color: @color_input_border;
 }
-select {	
+select {
 	height: 25px;
 }
 html {
@@ -619,6 +619,46 @@ span.ajax_loading_msg {
 		border: none;
 		background-color: #FFFFFF;
 		}
+
+
+
+// raw_msg (used in saml error)
+	.raw_msg {
+
+		background-image: url(../../themes/default/dedalo_icon_big.png);
+		background-repeat: no-repeat;
+		background-position: 0 top;
+		background-size: 527px 1024px;
+		height: 100vh;
+		max-height: 1000px;
+		//position: absolute;
+		width: 100%;
+
+		display: flex;
+		align-items: center;
+		justify-content: center;
+
+		flex-wrap: wrap;
+
+		>.content {
+			display: block;
+			clear: both;
+			position: relative;
+
+			>* {
+				margin: 30px;
+			}
+
+			>.saml_button {
+				text-align: center;
+				padding: 10px;
+				padding-left: 30%;
+				padding-right: 30%;
+			}
+
+		}
+
+	}//end raw_msg
 
 
 
