--- a/lib/dedalo/section/css/section.less
+++ b/lib/dedalo/section/css/section.less
@@ -190,3 +190,19 @@
 	#load_rows_button span {
 		align-self: center;
 	}
+
+
+// css_wrap_rows_search
+	.css_wrap_rows_search {
+		margin: 0px;
+		margin-left: 6px;
+		//margin-bottom: 5px;
+		/*
+		-moz-user-select: none;
+		-khtml-user-select: none;
+			-webkit-user-select: none;
+			user-select: none;
+			*/
+	}
+
+
