change the css of th tool_add_component_data

--- a/lib/dedalo/tools/tool_add_component_data/css/tool_add_component_data.less
+++ b/lib/dedalo/tools/tool_add_component_data/css/tool_add_component_data.less
@@ -5,10 +5,10 @@
 	display: block;
 	width: 99.9%;
 	height: 97.7%;
-	position: absolute;
-	text-align: left;
+	//position: absolute;
+	text-align: center;
 	/*background-color:#efc4f4;*/
-	padding: 20px;
+	//padding: 20px;
 	}
 	.wrap_tool_add_component_data_page .content_data {
 		width: 100%;	
