--- a/lib/dedalo/tools/tool_add_component_data/html/tool_add_component_data_page.phtml
+++ b/lib/dedalo/tools/tool_add_component_data/html/tool_add_component_data_page.phtml
@@ -18,7 +18,7 @@
 		$html .= "</div>";
 
 
-		// 'Se reemplazara el contenido del campo: %s en los %s registros actuales con el valor %s'
+		// The labels of the tool: 'Se reemplazara el contenido del campo: %s en los %s registros actuales con el valor %s'
 		$dialog = label::get_label('tool_add_component_data_dialog');
 		
 		$label 			= "<label>$label</label>";
