New list model based on JSON works (1)

--- a/lib/dedalo/component_text_area/html/component_text_area_list.phtml
+++ b/lib/dedalo/component_text_area/html/component_text_area_list.phtml
@@ -12,7 +12,7 @@
 	print "data-lang=\"{$lang}\" ";
 	print "data-modo=\"{$modo}\" ";
 	#print "data-dato=\"{$dato_raw}\" ";
-	print "data-context_name=\"{$context->context_name}\" ";
+	print "data-context_name=\"{$context_name}\" ";
 	print "data-component_name=\"{$component_name}\" ";
 	print "data-component_info='{}' ";
 	#print "data-related_tipo='{$ar_related_component_tipo_json}' ";
