Allow SHOW_DEVELOPER to use json editor in structure edit mode

--- a/lib/dedalo/dd/html/dd_edit.phtml
+++ b/lib/dedalo/dd/html/dd_edit.phtml
@@ -227,7 +227,7 @@ print js::build_tag(DEDALO_LIB_BASE_URL . '/dd/js/dd_edit.js');
 
 				
 				<!-- PROPIEDADES (JSON) -->
-				<?php if (SHOW_DEBUG) { ?>
+				<?php if (SHOW_DEBUG===true || SHOW_DEVELOPER===true) { ?>
 				<tr>
 					<td>
 						<div class="wraper_propiedades">
