Dynamic pagination for json list added

--- a/lib/dedalo/search/css/search.less
+++ b/lib/dedalo/search/css/search.less
@@ -342,6 +342,14 @@
 				zoom: 1.7;
 				}
 		}
+		.unactive {
+			opacity: 0.4;
+
+			&:hover {
+				opacity: 0.4;
+				cursor: default !important;
+			}
+		}
 
 
 
