--- a/lib/dedalo/section/css/section.less
+++ b/lib/dedalo/section/css/section.less
@@ -197,6 +197,7 @@
 		background-color: #f5f5f5;
 		display: block;
 		overflow: hidden;
+		clear: both;
 
 		>.row_container {			
 			display: grid;
