--- a/lib/dedalo/section_records/css/section_records.less
+++ b/lib/dedalo/section_records/css/section_records.less
@@ -224,17 +224,37 @@ table.css_section_list_table {
 }
 
 
-.section_buttons_container {
-	position: relative;
-	float: right;	
-	height: 36px;
-	z-index: 1;
-	//top: -3px;
-}
+
+// section_buttons_container
+	.section_buttons_container {
+		position: relative;
+		float: right;	
+		//height: 36px;
+		z-index: 1;
+		//top: -3px;
+		display: flex;
+
+		
+		>div {
+			height: 2.2em;
+			margin: 0;
+			margin-left: 5px;
+		}
+
+		>.css_button_trigger {
+			padding: 5px;
+			padding-right: 8px;
+			padding-left: 8px;
+		}
+		.button_trigger_response {
+			padding: 0;
+			margin: 0;
+			display: none;
+		}
+	}
 
 
-	/* Table relation 
-	------------------------------------------------------- */
+// Table relation 
 	.css_section_list_table_relation {
 		margin: 0;
 		padding: 0;
@@ -322,46 +342,45 @@ table.css_section_list_table {
 
 
 
-/* Section portal list
-------------------------------------------------------- */
-.section_edit_in_portal_td_row {
-	 /*background-color:#e9e9e9 !important; */
-	 height: 0px;
-}
-.section_edit_in_portal_td {
-	 /*background-color:#e9e9e9 !important;
-	 height: 0px;*/
-}
+// Section portal list 
+	.section_edit_in_portal_td_row {
+		 /*background-color:#e9e9e9 !important; */
+		 height: 0px;
+	}
+	.section_edit_in_portal_td {
+		 /*background-color:#e9e9e9 !important;
+		 height: 0px;*/
+	}
 
-.section_edit_in_portal_arrow {
-	height: 13px !important;
-	padding: 0 !important;
-	margin: 0;
-	background-color:#6e6e6e;
-	background-image: url('../../themes/default/arrow_10/arrow_bg.png');
-	background-repeat: repeat-x;
-	width:100%;
-	border-radius: 2px;
-	cursor: pointer;
-}
-.section_edit_in_portal_arrow_open {
-	border-bottom-left-radius: 0px;
-	border-bottom-right-radius: 0px;
-}
-.arrow_10_right {
-	background-image: url('../../themes/default/arrow_10/arrow_right.png');
-	background-repeat: no-repeat;
-	height: 10px;
-	width: 10px;
-	position: relative;
-	top: -1px;
-	left: 4px;
-	display: inline-block;
-}
-.arrow_10_down {
-	top: -2px;
-	background-image: url('../../themes/default/arrow_10/arrow_down.png');
-}
+	.section_edit_in_portal_arrow {
+		height: 13px !important;
+		padding: 0 !important;
+		margin: 0;
+		background-color:#6e6e6e;
+		background-image: url('../../themes/default/arrow_10/arrow_bg.png');
+		background-repeat: repeat-x;
+		width:100%;
+		border-radius: 2px;
+		cursor: pointer;
+	}
+	.section_edit_in_portal_arrow_open {
+		border-bottom-left-radius: 0px;
+		border-bottom-right-radius: 0px;
+	}
+	.arrow_10_right {
+		background-image: url('../../themes/default/arrow_10/arrow_right.png');
+		background-repeat: no-repeat;
+		height: 10px;
+		width: 10px;
+		position: relative;
+		top: -1px;
+		left: 4px;
+		display: inline-block;
+	}
+	.arrow_10_down {
+		top: -2px;
+		background-image: url('../../themes/default/arrow_10/arrow_down.png');
+	}
 
 
 
@@ -371,6 +390,8 @@ table.css_section_list_table {
 	display: none;
 }
 */
+
+
 
 /* component_av icon
 ------------------------------------------------------- */
