Tool cataloging develop works. Debug and clean code 2

--- a/lib/dedalo/tools/tool_cataloging/html/tool_cataloging_page.phtml
+++ b/lib/dedalo/tools/tool_cataloging/html/tool_cataloging_page.phtml
@@ -3,7 +3,7 @@
 	# VISUALIZADOR HTML
 	$html 	= "<!-- $tool_name $modo -->";
 
-	$html 	.= '<script>tool_cataloging.init("'.$data_json.'")</script>';
+	$html 	.= '<script>tool_cataloging.init("'. encodeURIComponent($data_json) .'")</script>';
 
 	$html 	.= "<!-- /$tool_name $modo -->";
 
