Fixed keyboard control and first temp_filter load in search

--- a/lib/dedalo/search/css/search.less
+++ b/lib/dedalo/search/css/search.less
@@ -377,7 +377,7 @@
 		background-color: rgba(239,239,239,0.7);
 	}
 	#search2_global_container {
-		display: none;
+		display: flex;
 		background-color: fade(@bg_color_global, 70%);
 		//background-color: rgba(239, 239, 239, 0.71);
 		border-radius: 5px;
