Added psql and pgpass file check on Dédalo init sequence

--- a/lib/dedalo/login/css/login.less
+++ b/lib/dedalo/login/css/login.less
@@ -110,6 +110,7 @@
 		    width: 100%;
 		    padding: 8px;
 		    margin: 0;
+		    white-space: pre-wrap;
 		}
 		.css_wrap_login .login_ajax_response .ok {
 			margin-top: 18px;
