Update local copy.

--- a/lib/dedalo/search/css/search.less
+++ b/lib/dedalo/search/css/search.less
@@ -342,6 +342,14 @@
 				zoom: 1.7;
 				}
 		}
+		.unactive {
+			opacity: 0.4;
+
+			&:hover {
+				opacity: 0.4;
+				cursor: default !important;
+			}
+		}
 
 
 
@@ -369,7 +377,7 @@
 		background-color: rgba(239,239,239,0.7);
 	}
 	#search2_global_container {
-		display: none;
+		display: flex;
 		background-color: fade(@bg_color_global, 70%);
 		//background-color: rgba(239, 239, 239, 0.71);
 		border-radius: 5px;
@@ -681,7 +689,7 @@
 				border: 1px solid #e6e6e6;
 				// Experimental all same width
 				// width: 300px;
-				flex-basis: 32%;
+				flex-basis: 32%;				
 				min-height: 55px;
 				border-radius: 2px;
 				}
