Revert "Allowed developer to export structure"
This reverts commit a115c108cfdf00909522e8850a0442eabc2a27c3.

--- a/lib/dedalo/html_page/html/html_page_header.phtml
+++ b/lib/dedalo/html_page/html/html_page_header.phtml
@@ -158,7 +158,7 @@ if (login::is_logged()) {
 
 			#
 			# STRUCTURE LINKS
-			if ( (SHOW_DEBUG===true || SHOW_DEVELOPER===true) && strpos($_SERVER['REQUEST_URI'], 'dd_list.php')!==false ) {
+			if ( SHOW_DEBUG===true && strpos($_SERVER['REQUEST_URI'], 'dd_list.php')!==false ) {
 
 					# IMPORT BUTTON (ADMIN)
 					/*
