--- a/lib/dedalo/tools/tool_export/css/tool_export.less
+++ b/lib/dedalo/tools/tool_export/css/tool_export.less
@@ -26,6 +26,7 @@
 		padding: 2px;
 		overflow-wrap: break-word;
 		border: 1px solid rgb(255, 255, 255);
+		padding-left: 0.4em;
 	}
 	.table_csv th {
 		background-color: #E2E2E2;
